<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_MOD_Par" Id="{8b74c0de-b752-48a1-b1d0-2494d13ced5a}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_MOD_Par :
STRUCT
	// [ms] Communication timeout to line control
	udiComTimeOutLineCtrl_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>